--- a/Content-Service/src/main/resources/application.properties
+++ b/Content-Service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Content-Service
+server.port=8082
+spring.datasource.url=jdbc:postgresql://localhost:5432/content_service_db
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
