--- a/Notification-Service/src/main/resources/application.properties
+++ b/Notification-Service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Notification-Service
+server.port=8083
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification_service_db
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
