--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=p1xZ&V7k2!f@rTgLmN0a#Qe9$yXhBwCmD4Uz
