--- a/Content-Service/src/main/resources/application-docker.properties
+++ b/Content-Service/src/main/resources/application-docker.properties
@@ -17,5 +17,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# -- KAFKA SETTINGS: CRUCIAL FOR DOCKER --
+spring.kafka.producer.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
