--- a/Notification-Service/Dockerfile
+++ b/Notification-Service/Dockerfile
@@ -1,6 +1,8 @@
 FROM openjdk:21-jdk-slim
-VOLUME /tmp
 WORKDIR /app
-COPY target/*.jar app.jar
+
+#COPY target/*.jar app.jar
+COPY . .
+RUN ./mvnw clean package -DskipTests
 EXPOSE 8083
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["sh", "-c", "java -jar target/*.jar"]
