--- a/User-Service/Dockerfile
+++ b/User-Service/Dockerfile
@@ -2,17 +2,16 @@
 # Use OpenJDK base image
 FROM openjdk:21-jdk-slim
 
-# Add a volume for logs (optional)
-VOLUME /tmp
-
 # Set working directory
 WORKDIR /app
 
 # Copy jar
-COPY target/*.jar app.jar
+#COPY target/*.jar app.jar
+COPY . .
+RUN ./mvnw clean package -DskipTests
 
 # Expose application port (optional)
 EXPOSE 8081
 
 # Run the application
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["sh", "-c", "java -jar target/*.jar"]
