--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
@@ -22,7 +23,6 @@ services:
     build:
       context: ./User-Service
       dockerfile: Dockerfile
-
     environment:
       SPRING_PROFILES_ACTIVE: docker
     ports:
@@ -51,4 +51,3 @@ services:
       SPRING_PROFILES_ACTIVE: docker
     ports:
       - "8083:8080"
-
