code clean with property file

--- a/Notification-Service/src/main/resources/application.properties
+++ b/Notification-Service/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # Optional: set default type if no class info sent
 # spring.kafka.consumer.properties.spring.json.value.default.type=com.vp.notification_service.kafka.ContentEvent
 
+websocket.allowed-origin=http://localhost:3000
